[package]
name = "avp-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent Validator Protocol - Core library for hook processing"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Pattern matching
glob = { workspace = true }
regex = { workspace = true }

# Logging
tracing = { workspace = true }

# File system traversal
walkdir = { workspace = true }

# File hashing, locking, and diffing
sha2 = { workspace = true }
base64 = { workspace = true }
fs2 = { workspace = true }
similar = { workspace = true }

# Git root finding and directory management
swissarmyhammer-common = { workspace = true }
swissarmyhammer-directory = { workspace = true }

# Prompts and templating for validator execution
swissarmyhammer-prompts = { workspace = true }
swissarmyhammer-config = { workspace = true }
swissarmyhammer-templating = { workspace = true }

# Agent creation (unified: claude-agent + llama-agent)
swissarmyhammer-agent = { workspace = true }
claude-agent = { workspace = true }
agent-client-protocol = { workspace = true }
agent-client-protocol-extras = { workspace = true }
uuid = { workspace = true }

# In-process MCP server backing the validator agent's tool surface
# (always started in `AvpContext`; see `context::resolve_validator_mcp_config`).
swissarmyhammer-tools = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }

# CLI detection
which = { workspace = true }

# Home directory resolution
dirs = { workspace = true }

[build-dependencies]
swissarmyhammer-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing-test = { workspace = true }
