[package]
name = "claude-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
url = "2.5"
infer = "0.16"
once_cell = "1.20"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
futures = { workspace = true }
uuid = "1.10"
serial_test = "3.0"
piper = "0.2"
