[package]
name = "claude-agent"
version = "0.3.0"
edition = "2021"
authors = ["SwissArmyHammer Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/swissarmyhammer/swissarmyhammer"

[lib]
test = false  # Disable lib cfg(test) modules - need ACP 0.9.0 fixes

[dependencies]
agent-client-protocol = "0.9.2"
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }
tokio = { version = "1.46", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
ulid = { version = "1.2.1", features = ["serde"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "stream", "gzip", "cookies"] }
tokio-tungstenite = "0.28"
base64 = "0.22"
uuid = { version = "1.10", features = ["v4", "serde"] }
regex = "1.10"
url = "2.5"
infer = "0.16"
once_cell = "1.20"
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
swissarmyhammer-todo = { path = "../swissarmyhammer-todo" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[features]
# Feature to enable disabled tests that need ACP 0.9.0 fixes
fix_tests_for_acp_0_9_0 = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"
futures = "0.3"
uuid = "1.10"
serial_test = "3.0"
piper = "0.2"
