[package]
name = "claude-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Claude agent implementation for SwissArmyHammer"

[lib]
test = false  # Disable lib cfg(test) modules - need ACP 0.9.0 fixes

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }
model-context-protocol-extras = { path = "../model-context-protocol-extras" }
rmcp = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
infer = { workspace = true }
once_cell = { workspace = true }
typed-builder = { workspace = true }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
swissarmyhammer-kanban = { path = "../swissarmyhammer-kanban" }
swissarmyhammer-modes = { path = "../swissarmyhammer-modes" }
swissarmyhammer-agents = { path = "../swissarmyhammer-agents" }
swissarmyhammer-prompts = { path = "../swissarmyhammer-prompts" }
swissarmyhammer-config = { path = "../swissarmyhammer-config" }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
libc = { workspace = true }

[features]
# Feature to enable disabled tests that need ACP 0.9.0 fixes
fix_tests_for_acp_0_9_0 = []

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
serial_test = { workspace = true }
piper = { workspace = true }
