[package]
name = "kanban-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop app for SwissArmyHammer Kanban board"

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
swissarmyhammer-kanban = { path = "../swissarmyhammer-kanban" }
swissarmyhammer-commands = { path = "../swissarmyhammer-commands" }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
swissarmyhammer-directory = { path = "../swissarmyhammer-directory" }
swissarmyhammer-views = { path = "../swissarmyhammer-views" }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
tracing-oslog = "0.3"
tauri-plugin-window-state = "2.4.1"
whoami = "1"
base64 = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }
