[package]
name = "kanban-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tauri desktop app for SwissArmyHammer Kanban board"

[package.metadata.dist]
dist = false

[[bin]]
name = "kanban-app"
path = "src/main.rs"

[dependencies]
swissarmyhammer-kanban = { workspace = true }
swissarmyhammer-commands = { workspace = true }
swissarmyhammer-common = { workspace = true }
swissarmyhammer-directory = { workspace = true }
swissarmyhammer-views = { workspace = true }
swissarmyhammer-entity-search = { workspace = true }
swissarmyhammer-entity = { workspace = true }
swissarmyhammer-perspectives = { path = "../swissarmyhammer-perspectives" }
swissarmyhammer-store = { path = "../swissarmyhammer-store" }
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = { version = "2", features = ["tracing"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
sha2 = { workspace = true }
tracing-oslog = "0.3"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-global-shortcut = "2"
urlencoding = { workspace = true }
whoami = "1"
base64 = { workspace = true }
ulid = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }
