[package]
name = "llama-agent"
version.workspace = true
edition = "2021"

[dependencies]
# Fixture support
agent-client-protocol-extras = { path = "../agent-client-protocol-extras" }

# Core inference
llama-cpp-2 = { workspace = true }

# MCP integration  
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
num_cpus = { workspace = true }
dirs = "6.0"

# HTTP client for MCP transport
http = "1.1"

# Process spawning for MCP child processes
process-wrap = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Futures
futures = { workspace = true }

# HuggingFace integration  
hf-hub = { workspace = true }

# Shared model loading
llama-loader = { workspace = true }

# Shared common utilities
llama-common = { workspace = true }

# JSON Schema validation
jsonschema = { workspace = true }
md5 = { workspace = true }

# Agent Client Protocol (always enabled)
agent-client-protocol = { workspace = true }

# Todo system integration for ACP (always enabled)
swissarmyhammer-todo = { path = "../swissarmyhammer-todo" }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
chrono = { workspace = true }

# Unix signal handling for graceful shutdown
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[features]
default = []
test-utils = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
# mockall = { workspace = true } # REMOVED - mocks are forbidden
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

rstest = { workspace = true }
criterion = "0.5"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "compaction_basic"
path = "examples/compaction_basic.rs"

[[example]]
name = "compaction_advanced"
path = "examples/compaction_advanced.rs"

[[example]]
name = "large_prompt_test"
path = "examples/large_prompt_test.rs"

[[example]]
name = "mcp_http"
path = "examples/mcp_http.rs"

[[example]]
name = "mcp_stdin"
path = "examples/mcp_stdin.rs"

[[example]]
name = "echo_stdio"
path = "src/examples/echo_stdio.rs"

[[example]]
name = "echo_sse"
path = "src/examples/echo_sse.rs"

[[example]]
name = "echo_streamable"
path = "src/examples/echo_streamable.rs"

[[example]]
name = "acp_stdio"
path = "src/examples/acp_stdio.rs"
