[package]
name = "llama-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local LLM agent using llama.cpp"

[dependencies]
# Fixture support
agent-client-protocol-extras = { workspace = true }

# Core inference
llama-cpp-2 = { workspace = true }

# MCP integration  
rmcp = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }


# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
url = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = { workspace = true }
num_cpus = { workspace = true }
dirs = { workspace = true }

# HTTP client for MCP transport
http = { workspace = true }

# Process spawning for MCP child processes
process-wrap = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Futures
futures = { workspace = true }

# HuggingFace integration  
hf-hub = { workspace = true }

# Shared model loading
model-loader = { workspace = true }

# Shared common utilities
llama-common = { workspace = true }

# JSON Schema validation
jsonschema = { workspace = true }
md5 = { workspace = true }

# Agent Client Protocol (always enabled)
agent-client-protocol = { workspace = true }

swissarmyhammer-common = { workspace = true }
swissarmyhammer-kanban = { workspace = true }

# Modes system for ACP session modes
swissarmyhammer-modes = { workspace = true }

# Agents (subagents) for mode system prompt resolution
swissarmyhammer-agents = { workspace = true }

# Prompt library for Liquid template rendering
swissarmyhammer-prompts = { workspace = true }

# Template context for Liquid rendering
swissarmyhammer-config = { workspace = true }

# Skills for ACP command discovery
swissarmyhammer-skills = { workspace = true }

chrono = { workspace = true }

# Unix signal handling for graceful shutdown
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[features]
default = []
test-utils = []

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
# mockall = { workspace = true } # REMOVED - mocks are forbidden
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }

# Validator MCP server for end-to-end tool-fetch integration tests.
# This is a dev-only dependency: `swissarmyhammer-tools` declares
# `llama-agent` as a regular dependency, but Cargo permits dev-only
# cycles, and we need the real validator entry point
# (`start_mcp_server_with_options`) here to verify that the URL → MCP
# `tools/list` → `Session.available_tools` path actually works for the
# always-on validator server.
swissarmyhammer-tools = { workspace = true }

rstest = { workspace = true }
criterion = { workspace = true }

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[example]]
name = "error_handling"
path = "examples/error_handling.rs"

[[example]]
name = "compaction_basic"
path = "examples/compaction_basic.rs"

[[example]]
name = "compaction_advanced"
path = "examples/compaction_advanced.rs"

[[example]]
name = "large_prompt_test"
path = "examples/large_prompt_test.rs"

[[example]]
name = "mcp_http"
path = "examples/mcp_http.rs"

[[example]]
name = "mcp_stdin"
path = "examples/mcp_stdin.rs"

[[example]]
name = "echo_stdio"
path = "src/examples/echo_stdio.rs"

[[example]]
name = "echo_sse"
path = "src/examples/echo_sse.rs"

[[example]]
name = "echo_streamable"
path = "src/examples/echo_streamable.rs"

[[example]]
name = "acp_stdio"
path = "src/examples/acp_stdio.rs"
