[package]
name = "llama-common"
version.workspace = true
edition = "2021"
description = "Shared types, traits, and utilities for the llama-agent workspace"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Async runtime
tokio = { workspace = true }

# Async traits
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = "0.4"
