[package]
name = "llama-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types, traits, and utilities for the llama-agent workspace"

[dependencies]
# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Async runtime
tokio = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Shared common utilities
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

[dev-dependencies]
tokio = { workspace = true }
tokio-test = { workspace = true }
