[package]
name = "llama-embedding"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Text embedding functionality using llama-cpp-2 with batch processing support"

[lib]
name = "llama_embedding"
crate-type = ["lib"]

[dependencies]
llama-common = { workspace = true }
llama-loader = { workspace = true }
llama-cpp-2 = { workspace = true }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
tokio = { workspace = true, features = ["sync"] }
md5 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
rstest = { workspace = true }
serial_test = { workspace = true }
