[package]
name = "llama-loader"
version.workspace = true
edition = "2021"
authors = ["Claude Code Assistant"]
description = "Shared model loading functionality for llama-agent ecosystem"
license = "MIT"
repository = "https://github.com/anthropics/llama-agent"

[dependencies]
llama-cpp-2 = { workspace = true }
llama-common = { workspace = true }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
hf-hub = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
dirs = "6.0"
sha2 = "0.10"
serde_json = "1.0"

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = "0.2"
serial_test = { workspace = true }
