[package]
name = "llama-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared model loading functionality for llama-agent ecosystem"

[dependencies]
llama-cpp-2 = { workspace = true }
llama-common = { workspace = true }
swissarmyhammer-common = { path = "../swissarmyhammer-common" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
hf-hub = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-test = { workspace = true }
serial_test = { workspace = true }
