# NEVER add features or feature flags to this Cargo.toml!
# SwissArmyHammer provides ALL functionality ALL the time.
# This is a SwissArmyHammer - every tool, every time!

[workspace]

[package]
name = "mcp-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }