[package]
name = "mirdan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mirdan - Universal skill and validator package manager for AI coding agents"

[lib]
name = "mirdan"
path = "src/lib.rs"

[[bin]]
name = "mirdan"
path = "src/main.rs"

[dependencies]
# Shared doctor infrastructure
swissarmyhammer-doctor = { path = "../swissarmyhammer-doctor" }

# Git detection
swissarmyhammer-common = { path = "../swissarmyhammer-common" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# CLI
clap = { workspace = true }

# Table display
comfy-table = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system
dirs = { workspace = true }
walkdir = { workspace = true }

# Authentication
axum = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Package management
zip = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap-markdown = { workspace = true }
clap_mangen = { workspace = true }
clap_complete = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
