[package]
name = "mirdan-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mirdan CLI - Command-line interface for the Mirdan package manager"

[[bin]]
name = "mirdan"
path = "src/main.rs"

[package.metadata.dist]
formula = "mirdan"

[dependencies]
mirdan = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
clap = { workspace = true }
clap-markdown = { workspace = true }
clap_mangen = { workspace = true }
clap_complete = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
