[package]
name = "mirdan"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mirdan - Universal package manager for AI coding agents (core library)"

[lib]
name = "mirdan"
path = "src/lib.rs"

[dependencies]
# Shared doctor infrastructure
swissarmyhammer-doctor = { workspace = true }

# Git detection
swissarmyhammer-common = { workspace = true }

# XDG directory helpers
swissarmyhammer-directory = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }

# CLI
clap = { workspace = true }

# Terminal interaction
crossterm = { workspace = true }

# Table display
comfy-table = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File system
dirs = { workspace = true }
walkdir = { workspace = true }

# Authentication
axum = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }

# Package management
zip = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures-util = { workspace = true }
indicatif = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
tempfile = { workspace = true }
pathdiff = { workspace = true }
git2 = { workspace = true, features = ["https", "vendored-openssl"] }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
