[package]
name = "sah-marker-macros"
version = "0.1.0"
edition = "2021"
authors = ["SwissArmyHammer Contributors"]
license = "MIT OR Apache-2.0"
description = "Procedural macros for SwissArmyHammer marker attributes"
keywords = ["mcp", "tools", "macro", "cli", "marker"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
# Procedural macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }