[package]
name = "swissarmyhammer-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Unified ACP agent creation and execution for SwissArmyHammer"

[dependencies]
agent-client-protocol.workspace = true
agent-client-protocol-extras = { workspace = true }
claude-agent = { workspace = true }
llama-agent = { workspace = true }
swissarmyhammer-common = { workspace = true }
swissarmyhammer-config = { workspace = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
which.workspace = true

[lints]
workspace = true
